Spring data jpa is added